--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.15",
+    "@ai-sdk/openai": "^3.0.21",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -40,6 +42,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
     "@vercel/analytics": "1.3.1",
+    "ai": "^6.0.57",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
