--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ next-env.d.ts
 
 # google cloud 
 gen-lang-client-0368641051-3acd2bfb5a7a.json
+
+# 努力の痕跡たち
+doryokunokonsekitati
+doryokunokonsekitati/OCR Extraction Fix.md
